<resources>
    <string name="app_name">Meeting Application</string>
    <string name="title_activity_maps">Map</string>
    <string name="change_light_gray_colour">Change to Light Gray</string>
    <string name="change_red_colour">Change to red</string>
    <string name="change_green_colour">Change to green</string>
    <string name="change_blue_colour">Change to blue</string>
    <string name="change_yellow_colour">Change to yellow</string>
    <string name="change_cyan_colour">Change to cyan</string>
    <string name="change_magenta_colour">Change to Magenta</string>
    <string name="close">Close</string>
    <string name="change_large_size">Change to large size</string>
    <string name="change_normal_size">Change to normal size</string>
    <string name="change_small_size">Change to small size</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="map">Map</string>
    <string name="notes">Notes</string>
    <string name="attendees">Attendees</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="select_time">Press time to select time</string>
    <string name="select_date">Press date to select date</string>
    <string name="select_map">Press map to select location</string>
    <string name="reset_default">Reset to default</string>
    <string name="font_settings">Font Settings</string>
    <string name="colour_settings">Text Colour Settings</string>




</resources>
