<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/change_large_size" />

    <Button
        android:id="@+id/btnNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLarge"
        android:layout_alignParentStart="true"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/change_normal_size" />

    <Button
        android:id="@+id/btnSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNormal"
        android:layout_alignParentStart="true"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/change_small_size" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNormal"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="47dp"
        android:text="@string/close" />
</RelativeLayout>