<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/reset_default" />

    <Button
        android:id="@+id/btnFontSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDefault"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/font_settings" />

    <Button
        android:id="@+id/btnTextColour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnFontSize"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/colour_settings" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTextColour"
        android:layout_alignParentStart="true"
        android:text="@string/close" />
</RelativeLayout>