<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.root.myapplication.MeetingDetail">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/textView"
                android:layout_width="86dp"
                android:layout_height="match_parent"
                android:text="@string/title"
                android:textSize="36sp"
                android:typeface="sans"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="60dp">

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="254dp"
                android:layout_height="match_parent"
                android:text="@string/select_time"
                android:textSize="18sp"
                android:typeface="sans"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="119dp">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="254dp"
                android:layout_height="match_parent"
                android:text="@string/select_date"
                android:textSize="18sp"
                android:typeface="sans"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="166dp">

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="254dp"
                android:layout_height="match_parent"
                android:text="@string/select_map"
                android:textSize="18sp"
                android:typeface="sans"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/map" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="234dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="86dp"
                android:layout_height="match_parent"
                android:text="@string/notes"
                android:textSize="18sp"
                android:typeface="sans"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTextNotes"
                android:layout_width="296dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="346dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="86dp"
                android:layout_height="match_parent"
                android:text="@string/attendees"
                android:textSize="18sp"
                android:typeface="sans"
                android:visibility="visible" />

            <AutoCompleteTextView
                android:id="@+id/AutoCompleteAttendees"
                android:layout_width="296dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="412dp">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remove" />

            <Button
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/close" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>